css/styles.css
/* VARIABLES */

:root {
  --main-color-dark: #212121;
  --secondary-color: #757575;
  --logo-color: #000000;
  --accent-color: #2196f3;
  --accent-color-hover: #188ce8;
  --main-color-light: #ffffff;
  --secondary-color-transp: rgba(255, 255, 255, 0.6);

  --main-text-size: 14px;
  --secondary-text-size: 16px;
  --main-text-letter-spacing: 0.03em;

  --background-color-dark: #2f303a;
  --background-color-light: #f5f4fa;
}

/* GLOBAL */

body {
  font-family: 'Roboto', sans-serif;
  color: var(--main-color-dark);
  font-weight: 400;
  font-size: var(--main-text-size);
  letter-spacing: var(--main-text-letter-spacing);
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0;
  padding: 0;
  font-size: inherit;
}

img {
  display: block;
}

/* COMPONENT */

.section {
  padding: 94px 0;
}

.container {
  max-width: 1200px;
  padding: 0 15px;
  margin: 0 auto;
}

.list {
  list-style: none;
}

.link {
  text-decoration: none;
  font-size: inherit;
  color: var(--main-color-dark);
}

.modal-button,
.btn {
  cursor: pointer;
  font-family: inherit;
}

.btn {
  color: var(--main-color-dark);
}

.section-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.17;
}

.visually-hidden {
  position: absolute;
  clip: rect(0 0 0 0);
  width: 1px;
  height: 1px;
  margin: -1px;
}

/* HEADER */

.header {
  border-bottom: 1px solid #ececec;
}

.header-content-container {
  display: flex;
  align-items: center;
}

.menu {
  display: flex;
  align-items: center;
}

.menu-list {
  display: flex;
  align-items: center;
}

.menu-list-item:not(:last-child) {
  margin-right: 50px;
}

.logo {
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  font-size: 26px;
  line-height: 1.19;
  color: var(--logo-color);
  margin-right: 93px;
  display: block;
  padding: 24px 0 25px;
}

.logo-accent {
  color: var(--accent-color);
}

.menu-list-link {
  display: block;
  font-weight: 500;
  line-height: 1.14;
  letter-spacing: 0.02em;
  padding: 32px 0;
}

.current-link {
  color: var(--accent-color);
}

.menu-list-link:hover,
.menu-list-link:focus {
  color: var(--accent-color);
}

.contact-list {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.contact-list-item:not(:last-child) {
  margin-right: 50px;
}

.contact-list-email,
.contact-list-tel {
  display: inline-flex;
  padding: 32px 0;
  font-weight: 500;
  line-height: 1.14;
  letter-spacing: 0.02em;
  color: var(--secondary-color);
}

.contact-list-email:hover,
.contact-list-email:focus,
.contact-list-tel:hover,
.contact-list-tel:focus {
  color: var(--accent-color);
}

.contact-list-icon-container {
  display: flex;
  align-items: center;
  margin-right: 10px;
  fill: var(--secondary-color);
}

.contact-list-email:hover .contact-list-icon-mail,
.contact-list-email:focus .contact-list-icon-mail,
.contact-list-tel:hover .contact-list-icon-tel,
.contact-list-tel:focus .contact-list-icon-tel {
  fill: var(--accent-color);
}

/* HERO */

.hero-section {
  background-color: #c4c4c4;
  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
    url(../images/studio/background-hero.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  max-width: 1600px;
  min-height: 600px;
  margin: 0 auto;
  text-align: center;
  padding: 200px 0;
}

.hero-content-container {
  text-align: center;
}

.hero-section-title {
  font-weight: 900;
  font-size: 44px;
  line-height: 1.36;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  color: var(--main-color-light);
  max-width: 610px;
  margin: 0 auto 30px;
}

.hero-section-button {
  font-weight: 700;
  font-size: var(--secondary-text-size);
  line-height: 1.88;
  text-align: center;
  letter-spacing: 0.06em;
  color: var(--main-color-light);

  background-color: #2196f3;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  border: none;
  border-radius: 4px;
  padding: 8px 20px;
}

.hero-section-button:hover,
.hero-section-button:focus {
  background-color: var(--accent-color-hover);
}

/* FEATURES */

.features-section {
  text-align: center;
  padding-bottom: 47px;
}

.features-section-list {
  display: flex;
  flex-wrap: wrap;
  margin-top: -30px;
  margin-left: -30px;
}

.features-section-list-item {
  text-align: left;
  margin-top: 30px;
  margin-left: 30px;
  flex-basis: calc((100% - 120px) / 4);
}

.features-section-list-icon-container {
  height: 120px;
  margin-bottom: 30px;
  background-color: var(--background-color-light);
  border-radius: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.features-section-list-icon {
  width: 70px;
  height: 70px;
}

.features-section-list-title {
  font-weight: 700;
  line-height: 1.14;
  text-transform: uppercase;
  margin-bottom: 10px;
}

.features-section-list-text {
  line-height: 1.71;
  color: var(--secondary-color);
}

/* SERVICES */

.services-section {
  text-align: center;
  padding-top: 47px;
}

.services-section-title {
  margin-bottom: 50px;
}

.services-section-list {
  display: flex;
  flex-wrap: wrap;
  margin-top: -30px;
  margin-left: -30px;
}

.services-section-list-item {
  margin-top: 30px;
  margin-left: 30px;
  flex-basis: calc((100% - 90px) / 3);
}

/* TEAM */

.team-section {
  background-color: var(--background-color-light);
  text-align: center;
}

.team-section-title {
  margin-bottom: 50px;
}

.team-section-list {
  display: flex;
  flex-wrap: wrap;
  margin-top: -30px;
  margin-left: -30px;
}

.team-section-list-item {
  margin-top: 30px;
  margin-left: 30px;
  flex-basis: calc((100% - 120px) / 4);
}

.team-section-list-card {
  background-color: var(--main-color-light);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 0px 0px 4px 4px;
  margin: 0 auto;
}

.team-section-list-card-text-container {
  font-size: var(--secondary-text-size);
  line-height: 1.19;
  padding: 30px 0;
}

.team-section-list-card-title {
  font-weight: 500;
  font-size: var(--secondary-text-size);
  line-height: 1.19;
  margin-bottom: 10px;
}

.team-section-list-card-text {
  color: var(--secondary-color);
  margin-bottom: 16px;
}

.card-social-list {
  display: flex;
  justify-content: center;
}

.card-social-list-item {
  width: 44px;
  height: 44px;
}

.card-social-list-item:not(:last-child) {
  margin-right: 10px;
}

.card-social-list-link {
  display: block;
  padding: 12px;
  border-radius: 50%;
}

.card-social-list-icon {
  width: 20px;
  height: 20px;
  fill: #afb1b8;
}

.card-social-list-item:hover {
  background-color: var(--accent-color);
  border-radius: 50%;
  fill: var(--main-color-light);
}

.card-social-list-item:hover .card-social-list-icon,
.card-social-list-item:focus .card-social-list-icon {
  fill: var(--main-color-light);
}

/* CLIENTS */

.client-content-container {
  text-align: center;
}

.client-section-title {
  margin-bottom: 50px;
}

.client-section-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
  margin-top: -30px;
}

.client-section-list-item {
  width: 170px;
  height: 92px;
  border: 1px solid #afb1b8;
  border-radius: 4px;
  margin-top: 30px;
}

.client-section-list-item:not(:last-child) {
  margin-right: 30px;
}

.client-section-list-link {
  display: block;
  padding: 16px 32px;
}

.client-section-list-icon {
  width: 106px;
  height: 60px;
  fill: #afb1b8;
}

.client-section-list-item:hover .client-section-list-icon,
client-section-list-item:focus .client-section-list-icon {
  fill: var(--accent-color);
}

/* FOOTER */

.footer {
  background-color: var(--background-color-dark);
  padding: 60px 0;
}

.footer-content-container {
  display: flex;
}

.footer-adress-container {
  margin-right: 70px;
}

.logo-alt {
  color: var(--main-color-light);
  margin-right: 0;
  padding: 0;
  margin-bottom: 20px;
}

.footer-adress-link {
  font-style: normal;
  line-height: 1.71;
  color: var(--main-color-light);
  display: block;
  margin-bottom: 9px;
}

.footer-contact-list-item:not(:last-child) {
  margin-bottom: 9px;
}

.footer-contact-list-tel,
.footer-contact-list-email {
  font-style: normal;
  line-height: 1.71;
  color: var(--secondary-color-transp);
}

.footer-contact-list-tel:hover,
.footer-contact-list-email:hover,
.footer-adress-link:hover,
.footer-contact-list-tel:focus,
.footer-contact-list-email:focus,
.footer-adress-link:focus {
  color: var(--accent-color);
}

.footer-social-container {
  margin-top: 12px;
}

.footer-social-title {
  font-weight: 700;
  font-size: var(--main-text-size);
  line-height: 1.14;
  letter-spacing: var(--main-text-letter-spacing);
  text-transform: uppercase;
  color: var(--main-color-light);
  margin-bottom: 20px;
}

.footer-social-list {
  display: flex;
}

.footer-social-list-item {
  width: 44px;
  height: 44px;
}

.footer-social-list-item {
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.1);
}

.footer-social-list-item:not(:last-child) {
  margin-right: 10px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.1);
}

.footer-social-list-link {
  display: block;
  padding: 12px;
  border-radius: 50%;
}

.footer-social-list-icon {
  width: 20px;
  height: 20px;
  fill: var(--main-color-light);
}

.footer-social-list-item:hover,
.footer-social-list-item:focus {
  background-color: var(--accent-color);
}

/* PORTFOLIO - COLLECTION */

.collection-section {
  text-align: center;
}

.collection-filters {
  display: flex;
  justify-content: center;
  margin-bottom: 50px;
}

.collection-filters-item:not(:last-child) {
  margin-right: 8px;
}

.collection-filters-button {
  font-weight: 500;
  font-size: var(--secondary-text-size);
  line-height: 1.63;
  text-align: center;

  background-color: var(--background-color-light);
  border: none;
  border-radius: 4px;
  padding: 6px 22px;
}

.current-button {
  color: var(--main-color-light);
  background-color: var(--accent-color);
  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
    0px 2px 2px rgba(0, 0, 0, 0.12);
}

.collection-filters-button:hover,
.collection-filters-button:focus {
  color: var(--main-color-light);
  background-color: var(--accent-color);
  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
    0px 2px 2px rgba(0, 0, 0, 0.12);
}

.collection-list {
  display: flex;
  flex-wrap: wrap;
  margin-top: -30px;
  margin-left: -30px;
}

.collection-list-item {
  margin-top: 30px;
  margin-left: 30px;
  flex-basis: calc((100% - 90px) / 3);
}

.collection-list-item:hover {
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
    1px 4px 6px rgba(0, 0, 0, 0.16);
}

.collection-list-card {
  background-color: var(--main-color-light);
  box-sizing: border-box;
  margin: 0 auto;
}

.collection-list-card-text-container {
  text-align: left;
  margin: 0;
  padding: 20px 24px;
  border-left: 1px solid #eeeeee;
  border-right: 1px solid #eeeeee;
  border-bottom: 1px solid #eeeeee;
}

.collection-list-card-title {
  font-weight: 700;
  font-size: 18px;
  line-height: 2;
  letter-spacing: 0.06em;
  margin-bottom: 4px;
}

.collection-list-card-text {
  font-size: var(--secondary-text-size);
  line-height: 1.88;
  color: var(--secondary-color);
}

